k8s/service-nodeport.yaml
# Triggers: NodePort in production
apiVersion: v1
kind: Service
metadata:
  name: demo-nodeport
spec:
  type: NodePort
  selector:
    app: bad-security-demo
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
